[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitshodankey"
version = "2.0.0"
description = "Fast async tool to find leaked API keys in public GitHub/GitLab repos"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "PyGithub>=2.0",
    "shodan>=1.28",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
gitshodankey = "gitshodankey.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitshodankey*"]
